WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163167
Promise attribute getters should reject promises in case of casted-this errors
https://bugs.webkit.org/show_bug.cgi?id=163167
Summary
Promise attribute getters should reject promises in case of casted-this errors
youenn fablet
Reported
2016-10-08 11:31:33 PDT
Currently, custom promise attributes throw They should not as per WebIDL.
Attachments
Patch
(12.75 KB, patch)
2016-10-08 11:35 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(13.44 KB, patch)
2016-10-08 11:47 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2016-10-08 11:35:27 PDT
Created
attachment 291017
[details]
Patch
youenn fablet
Comment 2
2016-10-08 11:47:48 PDT
Created
attachment 291019
[details]
Patch
WebKit Commit Bot
Comment 3
2016-10-09 00:36:41 PDT
Comment on
attachment 291019
[details]
Patch Clearing flags on attachment: 291019 Committed
r206966
: <
http://trac.webkit.org/changeset/206966
>
WebKit Commit Bot
Comment 4
2016-10-09 00:36:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug